Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28082

Adding filtering_permitted option causes build to fail

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • master
    • couchbase-bucket
    • Untriaged
    • Unknown

    Description

      When the filtering_permitted attribute was added to the event descriptors in n1ql it caused the build to fail, due to the auto generation of the audit_events.json file.

      Attachments

        For Gerrit Dashboard: MB-28082
        # Subject Branch Project Status CR V

        Activity

          People

            owend Daniel Owen
            owend Daniel Owen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty